# obsidian-parse

./: .gitignore  LICENSE  README.md  pyproject.toml
src/obsidian_parse/: __init__.py
src/obsidian_parse/parser/: __init__.py  canvas_parser.py  engine.py  markdown_parser.py  models.py
src/obsidian_parse/parser/markdown/: __init__.py  block_classifier.py  extractors.py  frontmatter.py
src/obsidian_parse/utils/: errors.py  graph.py  ignore.py  tags.py  vault.py
